generated/LangParser.cpp

// Generated from Lang.g4 by ANTLR 4.13.1


#include "LangListener.h"
#include "LangVisitor.h"

#include "LangParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct LangParserStaticData final {
  LangParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  LangParserStaticData(const LangParserStaticData&) = delete;
  LangParserStaticData(LangParserStaticData&&) = delete;
  LangParserStaticData& operator=(const LangParserStaticData&) = delete;
  LangParserStaticData& operator=(LangParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag langParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
LangParserStaticData *langParserStaticData = nullptr;

void langParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (langParserStaticData != nullptr) {
    return;
  }
#else
  assert(langParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<LangParserStaticData>(
    std::vector<std::string>{
      "source", "sourceItem", "funcDef", "funcSignature", "argList", "argDef", 
      "typeRef", "typeArgList", "statement", "identifierList", "expr", "primary", 
      "argExprList", "atom", "literal", "identifier", "builtinType"
    },
    std::vector<std::string>{
      "", "'function'", "'end'", "'if'", "'then'", "'else'", "'while'", 
      "'wend'", "'do'", "'loop'", "'break'", "'dim'", "'as'", "'until'", 
      "'true'", "'false'", "'return'", "", "'bool'", "'byte'", "'int'", 
      "'uint'", "'long'", "'ulong'", "'char'", "'string'", "", "", "", "", 
      "", "", "'='", "'=='", "", "'<'", "'>'", "'<='", "'>='", "'+'", "'-'", 
      "'*'", "'/'", "'%'", "'and'", "'or'", "'not'", "'('", "')'", "'['", 
      "']'", "','", "';'"
    },
    std::vector<std::string>{
      "", "FUNCTION", "END", "IF", "THEN", "ELSE", "WHILE", "WEND", "DO", 
      "LOOP", "BREAK", "DIM", "AS", "UNTIL", "TRUE", "FALSE", "RETURN", 
      "BOOL", "BUILTIN_BOOL", "BUILTIN_BYTE", "BUILTIN_INT", "BUILTIN_UINT", 
      "BUILTIN_LONG", "BUILTIN_ULONG", "BUILTIN_CHAR", "BUILTIN_STRING", 
      "HEX", "BITS", "DEC", "STRING", "CHAR", "Identifier", "ASSIGN", "EQ", 
      "NEQ", "LT", "GT", "LE", "GE", "ADD", "SUB", "MUL", "DIV", "MOD", 
      "AND", "OR", "NOT", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "COMMA", 
      "SEMI", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  langParserStaticData = staticData.release();
}

}

LangParser::LangParser(TokenStream *input) : LangParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

LangParser::LangParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  LangParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *langParserStaticData->atn, langParserStaticData->decisionToDFA, langParserStaticData->sharedContextCache, options);
}

LangParser::~LangParser() {
  delete _interpreter;
}

const atn::ATN& LangParser::getATN() const {
  return *langParserStaticData->atn;
}

std::string LangParser::getGrammarFileName() const {
  return "Lang.g4";
}

const std::vector<std::string>& LangParser::getRuleNames() const {
  return langParserStaticData->ruleNames;
}

const dfa::Vocabulary& LangParser::getVocabulary() const {
  return langParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView LangParser::getSerializedATN() const {
  return langParserStaticData->serializedATN;
}


//----------------- SourceContext ------------------------------------------------------------------

LangParser::SourceContext::SourceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LangParser::SourceContext::EOF() {
  return getToken(LangParser::EOF, 0);
}

std::vector<LangParser::SourceItemContext *> LangParser::SourceContext::sourceItem() {
  return getRuleContexts<LangParser::SourceItemContext>();
}

LangParser::SourceItemContext* LangParser::SourceContext::sourceItem(size_t i) {
  return getRuleContext<LangParser::SourceItemContext>(i);
}


size_t LangParser::SourceContext::getRuleIndex() const {
  return LangParser::RuleSource;
}

void LangParser::SourceContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSource(this);
}

void LangParser::SourceContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSource(this);
}


std::any LangParser::SourceContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LangVisitor*>(visitor))
    return parserVisitor->visitSource(this);
  else
    return visitor->visitChildren(this);
}

LangParser::SourceContext* LangParser::source() {
  SourceContext *_localctx = _tracker.createInstance<SourceContext>(_ctx, getState());
  enterRule(_localctx, 0, LangParser::RuleSource);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(37);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == LangParser::FUNCTION) {
      setState(34);
      sourceItem();
      setState(39);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(40);
    match(LangParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SourceItemContext ------------------------------------------------------------------

LangParser::SourceItemContext::SourceItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LangParser::FuncDefContext* LangParser::SourceItemContext::funcDef() {
  return getRuleContext<LangParser::FuncDefContext>(0);
}


size_t LangParser::SourceItemContext::getRuleIndex() const {
  return LangParser::RuleSourceItem;
}

void LangParser::SourceItemContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSourceItem(this);
}

void LangParser::SourceItemContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSourceItem(this);
}


std::any LangParser::SourceItemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LangVisitor*>(visitor))
    return parserVisitor->visitSourceItem(this);
  else
    return visitor->visitChildren(this);
}

LangParser::SourceItemContext* LangParser::sourceItem() {
  SourceItemContext *_localctx = _tracker.createInstance<SourceItemContext>(_ctx, getState());
  enterRule(_localctx, 2, LangParser::RuleSourceItem);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(42);
    funcDef();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncDefContext ------------------------------------------------------------------

LangParser::FuncDefContext::FuncDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> LangParser::FuncDefContext::FUNCTION() {
  return getTokens(LangParser::FUNCTION);
}

tree::TerminalNode* LangParser::FuncDefContext::FUNCTION(size_t i) {
  return getToken(LangParser::FUNCTION, i);
}

LangParser::FuncSignatureContext* LangParser::FuncDefContext::funcSignature() {
  return getRuleContext<LangParser::FuncSignatureContext>(0);
}

tree::TerminalNode* LangParser::FuncDefContext::END() {
  return getToken(LangParser::END, 0);
}

std::vector<LangParser::StatementContext *> LangParser::FuncDefContext::statement() {
  return getRuleContexts<LangParser::StatementContext>();
}

LangParser::StatementContext* LangParser::FuncDefContext::statement(size_t i) {
  return getRuleContext<LangParser::StatementContext>(i);
}


size_t LangParser::FuncDefContext::getRuleIndex() const {
  return LangParser::RuleFuncDef;
}

void LangParser::FuncDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFuncDef(this);
}

void LangParser::FuncDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFuncDef(this);
}


std::any LangParser::FuncDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LangVisitor*>(visitor))
    return parserVisitor->visitFuncDef(this);
  else
    return visitor->visitChildren(this);
}

LangParser::FuncDefContext* LangParser::funcDef() {
  FuncDefContext *_localctx = _tracker.createInstance<FuncDefContext>(_ctx, getState());
  enterRule(_localctx, 4, LangParser::RuleFuncDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(44);
    match(LangParser::FUNCTION);
    setState(45);
    funcSignature();
    setState(49);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 212209972153672) != 0)) {
      setState(46);
      statement();
      setState(51);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(52);
    match(LangParser::END);
    setState(53);
    match(LangParser::FUNCTION);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncSignatureContext ------------------------------------------------------------------

LangParser::FuncSignatureContext::FuncSignatureContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LangParser::IdentifierContext* LangParser::FuncSignatureContext::identifier() {
  return getRuleContext<LangParser::IdentifierContext>(0);
}

tree::TerminalNode* LangParser::FuncSignatureContext::LPAREN() {
  return getToken(LangParser::LPAREN, 0);
}

tree::TerminalNode* LangParser::FuncSignatureContext::RPAREN() {
  return getToken(LangParser::RPAREN, 0);
}

LangParser::ArgListContext* LangParser::FuncSignatureContext::argList() {
  return getRuleContext<LangParser::ArgListContext>(0);
}

tree::TerminalNode* LangParser::FuncSignatureContext::AS() {
  return getToken(LangParser::AS, 0);
}

LangParser::TypeRefContext* LangParser::FuncSignatureContext::typeRef() {
  return getRuleContext<LangParser::TypeRefContext>(0);
}


size_t LangParser::FuncSignatureContext::getRuleIndex() const {
  return LangParser::RuleFuncSignature;
}

void LangParser::FuncSignatureContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFuncSignature(this);
}

void LangParser::FuncSignatureContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFuncSignature(this);
}


std::any LangParser::FuncSignatureContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LangVisitor*>(visitor))
    return parserVisitor->visitFuncSignature(this);
  else
    return visitor->visitChildren(this);
}

LangParser::FuncSignatureContext* LangParser::funcSignature() {
  FuncSignatureContext *_localctx = _tracker.createInstance<FuncSignatureContext>(_ctx, getState());
  enterRule(_localctx, 6, LangParser::RuleFuncSignature);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(55);
    identifier();
    setState(56);
    match(LangParser::LPAREN);
    setState(58);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LangParser::Identifier) {
      setState(57);
      argList();
    }
    setState(60);
    match(LangParser::RPAREN);
    setState(63);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LangParser::AS) {
      setState(61);
      match(LangParser::AS);
      setState(62);
      typeRef(0);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgListContext ------------------------------------------------------------------

LangParser::ArgListContext::ArgListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LangParser::ArgDefContext *> LangParser::ArgListContext::argDef() {
  return getRuleContexts<LangParser::ArgDefContext>();
}

LangParser::ArgDefContext* LangParser::ArgListContext::argDef(size_t i) {
  return getRuleContext<LangParser::ArgDefContext>(i);
}

std::vector<tree::TerminalNode *> LangParser::ArgListContext::COMMA() {
  return getTokens(LangParser::COMMA);
}

tree::TerminalNode* LangParser::ArgListContext::COMMA(size_t i) {
  return getToken(LangParser::COMMA, i);
}


size_t LangParser::ArgListContext::getRuleIndex() const {
  return LangParser::RuleArgList;
}

void LangParser::ArgListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArgList(this);
}

void LangParser::ArgListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArgList(this);
}


std::any LangParser::ArgListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LangVisitor*>(visitor))
    return parserVisitor->visitArgList(this);
  else
    return visitor->visitChildren(this);
}

LangParser::ArgListContext* LangParser::argList() {
  ArgListContext *_localctx = _tracker.createInstance<ArgListContext>(_ctx, getState());
  enterRule(_localctx, 8, LangParser::RuleArgList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    argDef();
    setState(70);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == LangParser::COMMA) {
      setState(66);
      match(LangParser::COMMA);
      setState(67);
      argDef();
      setState(72);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgDefContext ------------------------------------------------------------------

LangParser::ArgDefContext::ArgDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LangParser::IdentifierContext* LangParser::ArgDefContext::identifier() {
  return getRuleContext<LangParser::IdentifierContext>(0);
}

tree::TerminalNode* LangParser::ArgDefContext::AS() {
  return getToken(LangParser::AS, 0);
}

LangParser::TypeRefContext* LangParser::ArgDefContext::typeRef() {
  return getRuleContext<LangParser::TypeRefContext>(0);
}


size_t LangParser::ArgDefContext::getRuleIndex() const {
  return LangParser::RuleArgDef;
}

void LangParser::ArgDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArgDef(this);
}

void LangParser::ArgDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArgDef(this);
}


std::any LangParser::ArgDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LangVisitor*>(visitor))
    return parserVisitor->visitArgDef(this);
  else
    return visitor->visitChildren(this);
}

LangParser::ArgDefContext* LangParser::argDef() {
  ArgDefContext *_localctx = _tracker.createInstance<ArgDefContext>(_ctx, getState());
  enterRule(_localctx, 10, LangParser::RuleArgDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    identifier();
    setState(76);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LangParser::AS) {
      setState(74);
      match(LangParser::AS);
      setState(75);
      typeRef(0);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeRefContext ------------------------------------------------------------------

LangParser::TypeRefContext::TypeRefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t LangParser::TypeRefContext::getRuleIndex() const {
  return LangParser::RuleTypeRef;
}

void LangParser::TypeRefContext::copyFrom(TypeRefContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- CustomTypeRefContext ------------------------------------------------------------------

LangParser::IdentifierContext* LangParser::CustomTypeRefContext::identifier() {
  return getRuleContext<LangParser::IdentifierContext>(0);
}

LangParser::CustomTypeRefContext::CustomTypeRefContext(TypeRefContext *ctx) { copyFrom(ctx); }

void LangParser::CustomTypeRefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCustomTypeRef(this);
}
void LangParser::CustomTypeRefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCustomTypeRef(this);
}

std::any LangParser::CustomTypeRefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LangVisitor*>(visitor))
    return parserVisitor->visitCustomTypeRef(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ArrayTypeRefContext ------------------------------------------------------------------

LangParser::TypeRefContext* LangParser::ArrayTypeRefContext::typeRef() {
  return getRuleContext<LangParser::TypeRefContext>(0);
}

tree::TerminalNode* LangParser::ArrayTypeRefContext::LPAREN() {
  return getToken(LangParser::LPAREN, 0);
}

tree::TerminalNode* LangParser::ArrayTypeRefContext::RPAREN() {
  return getToken(LangParser::RPAREN, 0);
}

LangParser::TypeArgListContext* LangParser::ArrayTypeRefContext::typeArgList() {
  return getRuleContext<LangParser::TypeArgListContext>(0);
}

LangParser::ArrayTypeRefContext::ArrayTypeRefContext(TypeRefContext *ctx) { copyFrom(ctx); }

void LangParser::ArrayTypeRefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArrayTypeRef(this);
}
void LangParser::ArrayTypeRefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArrayTypeRef(this);
}

std::any LangParser::ArrayTypeRefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LangVisitor*>(visitor))
    return parserVisitor->visitArrayTypeRef(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BuiltinTypeRefContext ------------------------------------------------------------------

LangParser::BuiltinTypeContext* LangParser::BuiltinTypeRefContext::builtinType() {
  return getRuleContext<LangParser::BuiltinTypeContext>(0);
}

LangParser::BuiltinTypeRefContext::BuiltinTypeRefContext(TypeRefContext *ctx) { copyFrom(ctx); }

void LangParser::BuiltinTypeRefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBuiltinTypeRef(this);
}
void LangParser::BuiltinTypeRefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBuiltinTypeRef(this);
}

std::any LangParser::BuiltinTypeRefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LangVisitor*>(visitor))
    return parserVisitor->visitBuiltinTypeRef(this);
  else
    return visitor->visitChildren(this);
}

LangParser::TypeRefContext* LangParser::typeRef() {
   return typeRef(0);
}

LangParser::TypeRefContext* LangParser::typeRef(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  LangParser::TypeRefContext *_localctx = _tracker.createInstance<TypeRefContext>(_ctx, parentState);
  LangParser::TypeRefContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 12;
  enterRecursionRule(_localctx, 12, LangParser::RuleTypeRef, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(81);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case LangParser::BUILTIN_BOOL:
      case LangParser::BUILTIN_BYTE:
      case LangParser::BUILTIN_INT:
      case LangParser::BUILTIN_UINT:
      case LangParser::BUILTIN_LONG:
      case LangParser::BUILTIN_ULONG:
      case LangParser::BUILTIN_CHAR:
      case LangParser::BUILTIN_STRING: {
        _localctx = _tracker.createInstance<BuiltinTypeRefContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;

        setState(79);
        builtinType();
        break;
      }

      case LangParser::Identifier: {
        _localctx = _tracker.createInstance<CustomTypeRefContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(80);
        identifier();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(91);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        auto newContext = _tracker.createInstance<ArrayTypeRefContext>(_tracker.createInstance<TypeRefContext>(parentContext, parentState));
        _localctx = newContext;
        pushNewRecursionContext(newContext, startState, RuleTypeRef);
        setState(83);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(84);
        match(LangParser::LPAREN);
        setState(86);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 2214330368) != 0)) {
          setState(85);
          typeArgList();
        }
        setState(88);
        match(LangParser::RPAREN); 
      }
      setState(93);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- TypeArgListContext ------------------------------------------------------------------

LangParser::TypeArgListContext::TypeArgListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LangParser::TypeRefContext *> LangParser::TypeArgListContext::typeRef() {
  return getRuleContexts<LangParser::TypeRefContext>();
}

LangParser::TypeRefContext* LangParser::TypeArgListContext::typeRef(size_t i) {
  return getRuleContext<LangParser::TypeRefContext>(i);
}

std::vector<tree::TerminalNode *> LangParser::TypeArgListContext::COMMA() {
  return getTokens(LangParser::COMMA);
}

tree::TerminalNode* LangParser::TypeArgListContext::COMMA(size_t i) {
  return getToken(LangParser::COMMA, i);
}


size_t LangParser::TypeArgListContext::getRuleIndex() const {
  return LangParser::RuleTypeArgList;
}

void LangParser::TypeArgListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeArgList(this);
}

void LangParser::TypeArgListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeArgList(this);
}


std::any LangParser::TypeArgListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LangVisitor*>(visitor))
    return parserVisitor->visitTypeArgList(this);
  else
    return visitor->visitChildren(this);
}

LangParser::TypeArgListContext* LangParser::typeArgList() {
  TypeArgListContext *_localctx = _tracker.createInstance<TypeArgListContext>(_ctx, getState());
  enterRule(_localctx, 14, LangParser::RuleTypeArgList);
  size_t _la = 0;
